After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 796213 - Meson: Fail to build on macosx
Meson: Fail to build on macosx
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: build
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks: 790954
 
 
Reported: 2018-05-17 18:04 UTC by Xavier Claessens
Modified: 2018-05-18 14:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
kqueue: Fix -Wdeclaration-after-statement errors (6.29 KB, patch)
2018-05-17 18:05 UTC, Xavier Claessens
none Details | Review
kqueue: Fix -Wdeclaration-after-statement errors (6.34 KB, patch)
2018-05-18 14:09 UTC, Xavier Claessens
committed Details | Review

Description Xavier Claessens 2018-05-17 18:04:24 UTC
Meson sets warning flags project wide, which is a good thing, but that means gio/kqueue fails to build with meson because of -Wdeclaration-after-statement on macos.
Comment 1 Xavier Claessens 2018-05-17 18:05:03 UTC
Created attachment 372157 [details] [review]
kqueue: Fix -Wdeclaration-after-statement errors
Comment 2 Xavier Claessens 2018-05-17 18:06:10 UTC
The good news is that was the only build issue I got when building on macos using GStreamer's cerbero. Did not try to run it thought.
Comment 3 Philip Withnall 2018-05-18 09:24:59 UTC
Review of attachment 372157 [details] [review]:

Feel free to push with this change. Thanks for catching all this. :-)

::: gio/kqueue/dep-list.c
@@ +171,3 @@
     DIR *dir = opendir (path);
+
+    assert (path != NULL);

This assert() is no longer effective, since `path` is used before it now (with the opendir(path) call on the line above). That opendir() call needs to be moved below the assert().
Comment 4 Xavier Claessens 2018-05-18 14:09:58 UTC
Created attachment 372186 [details] [review]
kqueue: Fix -Wdeclaration-after-statement errors
Comment 5 Xavier Claessens 2018-05-18 14:11:01 UTC
Attachment 372186 [details] pushed as 5b19df2 - kqueue: Fix -Wdeclaration-after-statement errors