kqueue: Fix -Wdeclaration-after-statement errors

https://bugzilla.gnome.org/show_bug.cgi?id=796213